--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -9,5 +9,5 @@ footer {
     	justify-content: center;
     	align-items: center;
     	display: flex;
-	border-top: 1px #CCCCCC;
+	border-top: 1px solid #CCCCCC;
 }
