--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -4,5 +4,5 @@ header {
 	background-color: #FFFFFF;
 	height: 70px;
 	width: 100%;
-	border-bottom: 1px #CCCCCC;
+	border-bottom: 1px solid #CCCCCC;
 }
