--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -24,22 +24,37 @@
 }
 
 div
-.locations
 .amenities {
+	display: inline-block;
+	vertical-align: middle;
+
 	height: 100%;
 	width: 20%;
+
+	margin-left: 50px;
 }
 
 div
 .locations {
+	display: inline-block;
+	vertical-align: middle;
+
+	height: 100%;
+	width: 20%;
+
+	margin-left: 45px;
 	border-right: 1px solid #DDDDDD;
 }
 
 .filters h3 {
 	font-weight: 600;
+	margin-top: 17px;
+	margin-bottom: 2px;
 }
 
 .filters h4 {
 	font-weight: 400;
 	font-size: 14px;
+	margin-top: 2px;
+	margin-bottom: 17px;
 }
