--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -19,8 +19,10 @@
 	width: 390px;
 	padding: 20px;
 	margin: 20px;
+
 	border: 1px solid #FF5A5F;
 	border-radius: 4px;
+
 	text-align: center;
 }
 
@@ -32,54 +34,86 @@
 
 .price_by_night {
 	display: block;
-	padding: 0px;
-	margin: auto;
+	right: 0;
 
+	justify-content: center;
+	
 	color: #FF5A5F;
 
-	border: 4px round #FF5A5F;
+	border: 4px solid #FF5A5F;
+	border-radius: 100%;
 
 	min-width: 60px;
 	height: 60px;
 
 	font-size: 30px;
 	float: right;
+	text-wrap: nowrap;
+	line-height: 60px;
+}
+
+.headline {
+	display: flex;
+	flex-direction: row;
+	position: relative;
+
+	height: 80px;	
+	width: 100%;
 }
 
 .information {
+	display: block;
 	height: 80px;
+	width: 100%;
+	border-top: 1px solid #DDDDDD;
+	border-bottom: 1px solid #DDDDDD;
 
-	border-top: 1px #DDDDDD;
-	border-bottom: 1px #DDDDDD;
-
-	align-items: vertical;
+	padding-top: 5px;
+	padding-bottom: 12px;
+	margin-top: 10px;
+	margin-bottom: 20px;
 }
 
-.max_guest {
+.max_guest, .number_rooms, .number_bathrooms {
+	display: inline-block;
 	width: 100px;
-
-	background: url('../images/icon_group.png') 20px center no-repeat;
-	background-color: #FFFFFF;
+	text-align: center;
+	margin: 0px auto;
 }
 
-.number_rooms {
-	width: 100px;
-
-	background: url('../images/icon_bed.png') 20px center no-repeat;
-	background-color: #FFFFFF;
+.guest_icon {
+	display: inline-block;
+	background-image: url("../images/icon_group.png");
+	background-repeat: no-repeat;
+	background-position: center;
+	width: 50px;
+	height: 50px;
 }
 
-.number_bathrooms {
-	width: 100px;
+.bed_icon {
+	display: inline-block;
+	background-image: url("../images/icon_bed.png");
+	background-repeat: no-repeat;
+	background-position: center;
+    width: 50px;
+    height: 50px;
+}
 
-	background: url('../images/icon_bath.png') 20px center no-repeat;
-	background-color: #DDDDDD;
+.bath_icon {
+	display: inline-block;
+	background-image: url("../images/icon_bath.png");
+	background-repeat: no-repeat;
+	background-position: center;
+    width: 50px;
+    height: 50px;
 }
 
 .user {
+	margin: 5px;
 	text-align: left;
 }
 
 .description {
+	margin: 1px;
 	text-align: middle;
 }
