--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -5,7 +5,7 @@ footer {
     	width: 100%;
     	text-align: center;
     	bottom: 0;
-    	position: absolute;
+    	position: relative;
     	justify-content: center;
     	align-items: center;
     	display: flex;
